@@ -42,7 +42,7 @@ MOSTLYCLEANFILES = *.orig *.rej
 
 EXTRA_DIST = bashdb.in bashdb-trace.in bashdb-main.inc.in \
 	     compute-prefix.sh \
-	     $(pkgdata_DATA) acinclude.m4 THANKS \
+	     $(pkgdata_DATA) acinclude.m4 README.md THANKS \
 	     make-check-filter.rb check-prefix.sh \
 	     ChangeLog ChangeLog.0
 
