@@ -1,21 +1,21 @@
-(clearbug.sh:2):
+(bug-clear.sh:2):
 2:	echo line 2
 +# Test bug we had where clearing a break on one line
 +# was disabling a break on the next one
 +# 
 + 
 +break 3
-Breakpoint 1 set in file clearbug.sh, line 3.
+Breakpoint 1 set in file bug-clear.sh, line 3.
 +break 5
-Breakpoint 2 set in file clearbug.sh, line 5.
+Breakpoint 2 set in file bug-clear.sh, line 5.
 +break 7
-Breakpoint 3 set in file clearbug.sh, line 7.
+Breakpoint 3 set in file bug-clear.sh, line 7.
 +clear 5
 Removed 1 breakpoint(s).
 +continue 
 line 2
 Breakpoint 1 hit (1 times).
-(clearbug.sh:3):
+(bug-clear.sh:3):
 3:	echo line 3
 +continue 
 line 3
@@ -23,7 +23,7 @@ line 4
 line 5
 line 6
 Breakpoint 3 hit (1 times).
-(clearbug.sh:7):
+(bug-clear.sh:7):
 7:	echo line 7
 +# Should have stopped at line 7 above
 +quit 
