@@ -19,12 +19,13 @@ check_output() {
   return $?
 }
 
+run_debugger_opts="-B -q --no-init --no-highlight"
 # Run the debugger on test program $1 with (optional) debugger options $2
 # using commandfile $3. We assume $TOP_BUILDDIR, $TOP_SRCDIR and
 # $TEST_NAME have been set previously
 run_debugger() {
   typeset debugged_script="$1"
-  typeset dbg_opts=${2:-"-L ${top_srcdir} -B -q --no-init --no-highlight"}
+  typeset dbg_opts=${2:-"-L ${top_srcdir} $run_debugger_opts"}
   [[ -z $short_test_name ]] && short_test_name=$TEST_NAME
   typeset cmdfile=${3:-"${top_srcdir}/test/data/${short_test_name}.cmd"}
   $SH -- ${top_builddir}/@PACKAGE@ $dbg_opts -x "$cmdfile" "$debugged_script" $ARGS
