@@ -6,7 +6,5 @@ t=${0##*/}; TEST_NAME=${t:5}   # basename $0 with 'test-' stripped off
 
 . ${builddir}/check-common.sh
 
-debugged_script="$top_srcdir/test/example/clearbug.sh"
-
 [[ -z "$builddir" ]] && builddir=$PWD
 run_test_check $TEST_NAME $TEST_NAME $debugged_script
