@@ -8,9 +8,9 @@ t=${0##*/}; TEST_NAME=${t:5}   # basename $0 with 'test-' stripped off
 
 debugged_script="$top_srcdir/test/example/bug-loc.sh"
 
-[[ -z "$builddir" ]] && builddir=$PWD
 if ( pygmentize --version || pygmentize -V ) 2>/dev/null 1>/dev/null ; then
-    run_test_check $TEST_NAME $TEST_NAME $debugged_script '--highlight'
+    run_debugger_opts="-B -q --no-init --highlight"
+    run_test_check $TEST_NAME $TEST_NAME $debugged_script
 else
     exit 77
 fi
